hphp/hack/test/typecheck/pipe_operator_containing_assignment.php.exp
File "pipe_operator_containing_assignment.php", line 16, characters 13-14:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "pipe_operator_containing_assignment.php", line 16, characters 13-37:
Feature not implemented: Assignment within pipe expressions (Other[0000])
